--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vite-app",
+  "name": "amans-resume",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.17.3",
+    "cal-sans": "^1.0.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
+    "headroom.js": "^0.12.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.2.2",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/headroom.js": "^0.12.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
