--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "antd": "^5.17.3",
     "cal-sans": "^1.0.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.2.10",
     "headroom.js": "^0.12.0",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
