--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@react-spring/parallax": "^9.7.3",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
@@ -19,9 +20,11 @@
     "cal-sans": "^1.0.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "gpt-type-effect": "^1.8.0",
     "headroom.js": "^0.12.0",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
+    "react-chatgpt-typewriter": "^1.0.5",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.2.2",
     "simplex-noise": "^4.0.1",
