--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "^18.2.0",
     "react-chatgpt-typewriter": "^1.0.5",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "reactstrap": "^9.2.2",
     "simplex-noise": "^4.0.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
